video fixed width and align center

--- a/app/styles/_partial-visual.scss
+++ b/app/styles/_partial-visual.scss
@@ -26,12 +26,12 @@
   .center.delta{
     margin:0 auto;
     position:relative;
-      width:470px;
-      height:100%;
+    width:470px;
+    height:100%;
     h3{
       position:absolute;
       top:50%;
-      margin-top:-10%;
+      margin-top: -105px;
       width:480px;
       color:#fff;
       font-weight: bold;
